# Alf

./: README.md  hello.py  pyproject.toml  response.json
dog-upload-form/: package.json  tailwind.config.js
dog-upload-form/app/: globals.css  page.tsx
dog-upload-form/components/: dog-upload-form.tsx
git-repo-temp.git/: config  packed-refs
git-repo-temp.git.bfg-report/2025-03-07/17-05-32/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
git-repo-temp.git/info/: refs
git-repo-temp.git/objects/info/: commit-graph  packs
git-repo-temp.git/objects/pack/: pack-d6a477bb3ed4ae329e0172a9417c840771c5722f.bitmap  pack-d6a477bb3ed4ae329e0172a9417c840771c5722f.idx  pack-d6a477bb3ed4ae329e0172a9417c840771c5722f.pack
pet_express_scraper/: .env.example  Dockerfile  PET_EXPRESS_API_SPECIFICATION.md  README.md  main.py  requirements.txt
pet_express_scraper/agents/: __init__.py  recommendation_agent.py
pet_express_scraper/api/: routes.py
pet_express_scraper/scrapers/: pet_express_scraper.py  petbacker_scraper.py
pet_express_scraper/utils/: http_utils.py
